--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@beyonk/google-fonts-webpack-plugin": "^1.7.0",
     "babel-loader": "^8.0.5",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "css-minimizer-webpack-plugin": "^1.3.0",
@@ -33,7 +35,6 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "@beyonk/google-fonts-webpack-plugin": "^1.7.0",
     "d3": "^7.4.4",
     "intersection-observer": "^0.12.2",
     "react-circle-flags": "^0.0.17",
