--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,13 +21,14 @@
         "import"
     ],
     "rules": {
+        "arrow-parens":0,
         "camelcase":0,
+        "comma-dangle":0,
         "import/extensions": [0],
         "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "max-len":0,
         "no-console":0,
         "no-tabs": 1,
-        "comma-dangle":0,
-        "arrow-parens":0,
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
