--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,9 +25,11 @@
         "camelcase":0,
         "comma-dangle":0,
         "import/extensions": [0],
-        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "import/no-extraneous-dependencies": [0, {"devDependencies": true}],
         "max-len":0,
         "no-console":0,
+        "no-param-reassign": [0],
+        "no-plusplus":0,
         "no-tabs": 1,
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
