--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "login":"az login --service-principal -u $AZURE_USER -p $AZURE_PW --tenant $AZURE_TENANT",
+    "push": "git push && git push unctad main",
     "start": "webpack serve --open --config webpack.dev.js",
     "sync-gh-pages": "git subtree push --prefix public origin gh-pages",
     "sync-prod":"echo \"azcopy copy 'public/*' 'https://$AZURE_STORAGE_NAME.blob.core.windows.net/\\$web/${npm_package_name}/' --include-path 'js;css;assets' --recursive --exclude-pattern '.DS_Store'\""
